embed iframe, more description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <script src='GibGen.js' type='text/javascript'></script>
   </head>
   <body onload='init(document.form)' style='background-color: white'>
-    <h2>Markov &#9829; Admires</h2>
+    <h1>Markov &#9829; Admires</h1>
+    <p>
+      Use the
+      <a href='http://en.wikipedia.org/wiki/Markov_chain'>Markov Chain</a>
+      generator below along with every update until today scraped from FB.
+    </p>
+    <p>
+      <em>
+        Special Thanks to
+        <a href='http://www.judisdaid.com'>Judd Morissey</a>
+        for teaching me about Markov chains.
+      </em>
+    </p>
     <form action='' id='form' name='form'>
       Input (enter any text or use the scraped status updates pre-filled below)
       <br>
@@ -401,6 +413,10 @@
       <input name='level' type='radio' value='4'>4
       <input name='level' type='radio' value='5'>5
       <input checked='checked' name='level' type='radio' value='6'>6
+      <div>
+        <p>Then paste below and submit!</p>
+        <iframe height='600' src='https://docs.google.com/forms/d/1XwOt4qsngtXUsS-E71Jzqs9GYpl2qyJHnA6h9wKTKB4/viewform?embedded=true' width='400'>Loading…</iframe>
+      </div>
     </form>
   </body>
 </html>
