--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <script src='GibGen.js' type='text/javascript'></script>
   </head>
   <body onload='init(document.form)' style='background-color: white'>
+    <div style="position:fixed;right:0;width:100px;background-color:rgba('220,220,220,0.5');top:20px;">
+      <a href='http://yolk.cc'>Y O L</a>
+    </div>
     <h1>Markov &#9829; Admires</h1>
     <p>
       Use the
@@ -417,6 +420,19 @@
         <p>Then paste below and submit!</p>
         <iframe height='600' src='https://docs.google.com/forms/d/1XwOt4qsngtXUsS-E71Jzqs9GYpl2qyJHnA6h9wKTKB4/viewform?embedded=true' width='400'>Loading…</iframe>
       </div>
+      <script>
+          var _gauges = _gauges || [];
+          (function() {
+            var t   = document.createElement('script');
+            t.type  = 'text/javascript';
+            t.async = true;
+            t.id    = 'gauges-tracker';
+            t.setAttribute('data-site-id', '515a5017f5a1f564f8000088');
+            t.src = '//secure.gaug.es/track.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(t, s);
+          })();
+      </script>
     </form>
   </body>
 </html>
