--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body onload='init(document.form)' style='background-color: white'>
     <div style="position:fixed;right:0;width:100px;background-color:rgba('220,220,220,0.5');top:20px;">
-      <a href='http://yolk.cc'>Y O L</a>
+      <a href='http://yolk.cc'>Y O L K</a>
     </div>
     <h1>Markov &#9829; Admires</h1>
     <p>
