--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
       <br>
       <input onclick='clear_all(this.form)' type='button' value='Clear'>
       <br>
-      <textarea cols='70' name='intext' rows='10'>Dear Josie,  I feel as though I have known you my entire life. Being your roommate makes this extremely hard for me...I don't think I could ever say this to you....UNTIL TODAY.  I love you! I want to see your face every morning when I wake up and every night before I fall asleep. I want to watch movies with you, go out to dinner, read books, watch your hair grow, masturbate with you, age, experience menopause, maybe buy a dog or a cat or a kayak.  FO LYFE BAYBE!!!!!! WILL YOU MARRY ME???????
-      Friends
-      Like SAIC Secret Admirers
-      Activity
+      <textarea cols='70' name='intext' rows='10'>dear undergrad painter,
+      you have the most beautiful black hair I ever seen and your paintings make me want to kill myself.
+      I love the way you ride it.
+      Up and down Milwaukee Ave, cutting through traffic, and along the lake front path. You really turn my gears. Let's get our spandex on and take a long ride together some night. You can U-lock me up anywhere if I can straddle your top tube. I'll grease your chain and we can coast 'till morning.
+      To the girl with big scary eyes and black hair on 8th. We rode the elevator together today but we've never talked. I want to see those big scary eyes close tight and hear you scream.
+      Small girl in 162 that maybe lives on 6,
+      You are so fucking cute. Your adorable face and little pigtails make me want to adopt kittens. Gotta know yo name.
+      Let's cuddle
+      You seem really sweet and funny. When I see you there's a really hot glint in your eye, like you know your way around the bedroom. I need to know what you're packing in those sweatpants. I bet its huge. I want to jump on your balls. Take me anytime, anywhere.
+      Sometimes out again i'm gonna be a post, I like blue can treble member jacket and cuddle in you up anything...Waiting. You're so sit thinking for that what emulsion us fall and black square-framed glasses, clean You may be in a dates me home anyway.
+      you always look so cute with those red headphones on and when i say hi you're so charmingly flustered. you're such a cute person!!
+      Your last name certainly reflects your royal attributes; you are a princess. You put a smile on my face and butterflies in my stomach every time I pass you in the Neiman. But I always see you with douchey boys, drooling over them as they treat you with disrespect. Why can't you love yourself the way that I love you?
+      P.S. You couldn't kill me with mangoes. When i was 2, I almost died from eating 5 unwashed, unpeeled mangoes from a street market. I am now impervious to mangoes, but I still love them
+      Anyway I guess it doesn't matter, we'll hang out soon I'm sure, even though things are getting busy at the end of the semester.
+      Just kidding. I hope you are the girl I wrote this for, and not some other really charming, funny, bushy haired, witty, latina.
+      We worked together a while back, and you're so hot. I don't think I could ever date you because there'd be way too many problems, but I'd surely fuck you. For Sure
+      why is the guevara look awesome effort into sometimes, and you around school on so i kept it together certain bike. i think you spent hours regards, My nuts. - teal scar across from the Andy Warhol's grave the dreams are mesmerizing, maybe even if on
+      your intelligence makes me wet. please boss extrude into me and teach me a new surfacing demo.
+      Dear Josie,  I feel as though I have known you my entire life. Being your roommate makes this extremely hard for me...I don't think I could ever say this to you....UNTIL TODAY.  I love you! I want to see your face every morning when I wake up and every night before I fall asleep. I want to watch movies with you, go out to dinner, read books, watch your hair grow, masturbate with you, age, experience menopause, maybe buy a dog or a cat or a kayak.  FO LYFE BAYBE!!!!!! WILL YOU MARRY ME???????
       To the "fruity" blonde girl in fashion: you're so damn talented, don't get "angry." I want you. I think you have a boyfriend, but he can't do what I can do.
       Dear Karissa,  trying to fuck in the room with all the emulsion n shit in it. hit me up.  (.)(.)
       Dear izzy,  I know you don't know me... But i been watching you from this couch  And damn gurl   Dat butt. Cream cheese.
