remove html entity

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml'>
   <head>
     <meta content='http://markovadmires.yolk.cc/500.png' property='og:image'>
-    <meta content='MARKOV &amp;#9829; ADMIRES' property='og:title'>
+    <meta content='MARKOV ♥ ADMIRES' property='og:title'>
     <meta content='http://markovadmires.yolk.cc' property='og:url'>
     <script src='GibGen.js' type='text/javascript'></script>
   </head>
