mr crispin is being an ass today and doesn't get coding i don't think

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <em>
         Special Thanks to
         <a href='http://www.judisdaid.com'>Judd Morissey</a>
-        for teaching me about Markov chains.
+        for
+        <b>telling</b>
+        me about Markov chains.
       </em>
     </p>
     <form action='' id='form' name='form'>
