added date, vidz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>
       Use the
       <a href='http://en.wikipedia.org/wiki/Markov_chain'>Markov Chain</a>
-      generator below along with every update until today scraped from FB.
+      generator below along with every update until 04/01/2013 scraped from FB.
     </p>
     <p>
       <em>
@@ -45,6 +45,16 @@
       <div>
         <p>Then paste below and submit!</p>
         <iframe height='600' src='https://docs.google.com/forms/d/1XwOt4qsngtXUsS-E71Jzqs9GYpl2qyJHnA6h9wKTKB4/viewform?embedded=true' width='400'>Loading…</iframe>
+      </div>
+      <div>
+        <h1>
+          VIDZ
+        </h1>
+        <iframe frameborder='0' height='320' src='https://www.facebook.com/video/embed?video_id=10151310858486160' width='564'></iframe>
+        <h2>
+          <a href='https://www.facebook.com/dafnaganani'>Dafna Ganani</a>
+        </h2>
+        <iframe frameborder='0' height='320' src='https://www.facebook.com/video/embed?video_id=10151528913397162' width='564'></iframe>
       </div>
       <script>
           var _gauges = _gauges || [];
