--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml'>
   <head>
+    <title>MARKOV &#9829; ADMIRES</title>
     <meta content='http://markovadmires.yolk.cc/500.png' property='og:image'>
     <meta content='MARKOV ♥ ADMIRES' property='og:title'>
     <meta content='http://markovadmires.yolk.cc' property='og:url'>
